--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -1,23 +1,34 @@
 html body {
 
-    background-color: #74B9E0;
-    margin-bottom: 0px;
+    background-color: #EDC7B7;
+ 
     height: 100%;
-
+  
 }
 
+.background {
+   /*   background-image: url ("/static/images/dublin.png"); */
+    background-image: url("http://trinitybarvenue.ie/wp-content/uploads/2016/05/OCH_Alex__Dublin_Grand_Canal_4d5d4de1.jpg");
+height: 100%;
+        background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-
-
-.navbar-static-top {
-  margin-bottom: 25px;
+.navbar-header {
+    height: 150px;
+}
+.navbar navbar-static-top {
+   height: 150px;
     
 }
 
 .navbar {
-    background-color: #F8F8F8;
-    border-color: #E7E7E7;
+
+    height: 150px;
+    margin-bottom: 0;
 }
+
 
 .active img {
     width: 90px;
@@ -29,7 +40,7 @@ html body {
 
 
 .container {
-    padding-top: 15px;
+ padding-top: 0;
     border-radius: 10px;
 padding-left: 15px;
     padding-right: 15px;
@@ -42,15 +53,18 @@ padding-left: 15px;
 }
 
  .active h3 {
-     color: #C36891;
+     color: black;
      font-size: 24px;
      margin-right: 25px;
 }
 
+h1 {
+    color: black;
+}
 .navbar-header h1 {
-    color: #C36891;
+    color: black;
     margin-left: 80px;
-    height: 50px;
+    height: 40px;
  /*   font-family: "Trebuchet MS", Helvetica, sans-serif;*/
 }
 #map {
@@ -87,7 +101,7 @@ col-md-4 {
 }
 
 .form-group {
-    padding-top: 10px; 
+  
 
 
 }
