--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -28,10 +28,10 @@
   </head>
 
 
-  <body>
-
+  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg1xq_PD6ELnsGOUOnhSJJ8nF-AWnwyCB5pH_VdSZdop2smGU4" style="no-repeat">
+      <div class="background"></div>
     <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top" style=background-color:white; >
+    <nav class="navbar navbar-static-top" style=background-color:transparent; >
      
         <div class="navbar-header">
           <h1>Trek Dublin</h1>
@@ -40,7 +40,7 @@
             <li class="active">   <img id="icon" src="http://openweathermap.org/img/w/10d.png" />
          
             {{weather.mainDescription}} {{ weather.temp }} &#8451;
-<img src="/static/images/bus.png"> <img src="/static/images/ucd.png"><span class="sr-only">(current)</span></li>
+<span class="sr-only">(current)</span></li>
            
 
           </ul>
@@ -63,7 +63,10 @@
           </a>  
              <a class="btn btn-primary active" data-toggle="collapse"  href="#collapseExample1" data-parent="#accordian" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="disappear1()">
     Route Search
-  </a>       
+  </a>   
+           <a class="btn btn-primary active" data-toggle="collapse"  href="#collapseExample2" data-parent="#accordian" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="disappear2()">
+    Map Search
+  </a>   
       </div></div>
 
 	     
@@ -108,6 +111,18 @@
             <br>
             <button type = "submit" class = "save btn btn-default">Go</button>
         </form>
+         <div class="collapse in" id="collapseExample2" >
+  <div class="panel-collapse collapse in"><div class="panel-body">
+        <form method = "POST" class = "post-form" id="post-form2" required>{% csrf_token %}
+            
+              <h4>Start Address: </h4><input id="start_address" type="text" name="start_address">
+	
+         <h4> End Address: </h4><input id="end_address" type="text" name="end_address" required>
+ <br>
+	        
+            
+	       <br> <button id = "address_submit" type = "submit" class = "save btn btn-default" required>Go</button>
+      </form></div></div></div>
     </div></div></div>
         
         <div id="results"><p>  </p></div>
@@ -172,16 +187,24 @@
 //         $('#post-form1').show(); 
 //     }
         
-       
+         $('#post-form2').hide();
         function disappear1(){
         $('#post-form').show();
              $('#post-form1').hide();
+           $('#post-form2').hide();
             
       }
         
         function showDiv(){
             $('#post-form').hide();
+          
              $('#post-form1').show();
+      }
+        
+          function disappear2(){
+     
+      $('#post-form').hide();
+                 $('#post-form2').show();
       }
         
         
@@ -189,6 +212,7 @@
         $('#date_input').toggle();
       }
 
+        
 	    function validateForm() {
 
 		    start = document.getElementById("start_address").value;
@@ -264,7 +288,7 @@
     
     google.maps.event.addListener(map, 'click', function(event) {
 
-alert(event.latLng.lat() + ", " + event.latLng.lng());
+//alert(event.latLng.lat() + ", " + event.latLng.lng());
         newLat=event.latLng.lat();
         newLng=event.latLng.lng();
         count++;
@@ -272,7 +296,8 @@ alert(event.latLng.lat() + ", " + event.latLng.lng());
         if (count <=2) {
             placeMarker(event.latLng);
         }
-       alert(count);
+     
+ //      alert(count);
 
             
         
@@ -294,7 +319,7 @@ alert(event.latLng.lat() + ", " + event.latLng.lng());
                  console.log(results);
      var address = (results[0].formatted_address);
                 
-                alert(address);
+       //         alert(address);
                 
                  if (count%2==0) {
             document.getElementById('end_address').value=address;
