--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -28,13 +28,13 @@
   </head>
 
 
-  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg1xq_PD6ELnsGOUOnhSJJ8nF-AWnwyCB5pH_VdSZdop2smGU4" style="no-repeat">
+  <body background="https://cdn.wallpapersafari.com/1/49/qeG3k4.jpg" style="no-repeat">
       <div class="background"></div>
     <!-- Static navbar -->
-    <nav class="navbar navbar-static-top" style=background-color:transparent; >
+    <nav class="navbar navbar-static-top" style=background-color:transparent; style=height:  20px !important; >
      
         <div class="navbar-header">
-          <h1>Trek Dublin</h1>
+          <h1>Bus App</h1>
         </div>
           <ul class="nav navbar-nav navbar-right">
             <li class="active">   <img id="icon" src="http://openweathermap.org/img/w/10d.png" />
