--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -114,7 +114,10 @@
     <div id='date_input'>
       <input type='datetime-local' id='datetime' data-date-inline-picker="true" pattern="[0-9]{4}/[0-9]{2}/[0-9]{2} [0-9]{2}:[0-9]{2}" placeholder="YYYY/MM/DD HH:MM" />
     </div>
+	<br>
+	<br>
         <div id="results"><p>  </p></div>
+	<div id="price"></div>	
       </div> 
             </div>  
       <!-- Main component for a primary marketing message or call to action -->
@@ -142,7 +145,9 @@
       var c = new Date();
       var f = new Date(c);
       f.setDate(f.getDate() + 4);
-
+      var table;
+      var geocoder;
+      var click_count = 0;
       
 
       function stringifyDate(year, month, day, hour, minute, second) {
@@ -259,6 +264,7 @@
       function initMap(){
 	      directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers:true});
         directionsService = new google.maps.DirectionsService();
+        geocoder = new google.maps.Geocoder;
         map = new google.maps.Map(document.getElementById('map'), {
         	zoom: 12,
           center: {lat: 53.3498, lng: -6.2603}
@@ -267,87 +273,7 @@
         var trafficLayer = new google.maps.TrafficLayer();
 	      trafficLayer.setMap(map);
           
-            // MY NEW BITS ARE HERE
     
-   
-       var count=0;
-    
-    google.maps.event.addListener(map, 'click', function(event) {
-
-//alert(event.latLng.lat() + ", " + event.latLng.lng());
-        newLat=event.latLng.lat();
-        newLng=event.latLng.lng();
-        count++;
-        
-        if (count <=2) {
-            placeMarker(event.latLng);
-        }
-     
- //      alert(count);
-
-            
-        
-        function placeMarker(location) {
-    var marker1 = new google.maps.Marker({
-        position: location, 
-        map: map
-    })};
-        
-        
-        var geocoder=new google.maps.Geocoder;
-        geocodeLatLng(geocoder, map);
-        
-        function geocodeLatLng(geocoder, map) {
-        var latlng={lat:newLat, lng: newLng};
-   
-        geocoder.geocode({'location': latlng}, function(results, status) {
-            if (status ==='OK') {
-                 console.log(results);
-     var address = (results[0].formatted_address);
-                
-       //         alert(address);
-                
-                 if (count%2==0) {
-            document.getElementById('end_address').value=address;
-        }else {
-                document.getElementById('start_address').value=address;
-    }
-    }else {
-        alert("no results found");
-    }
-    // This is checking to see if the Geoeode Status is OK before proceeding
-  
-    }
-  )};
-        //https://developers.google.com/maps/documentation/javascript/examples/geocoding-reverse
-       
-          
-        
-        
-		  //    getDirections();
- //        new google.maps.Circle({
-   //         map : map,
-    //        center : {lat: newLat, lng: newLng},
-//            strokeColor:'#00FFCC',
-  //          strokeWeight:2,
-//            fillOpacity:0,
-//            radius:1000
-  //      });
-//        function calculateDist(p1, p2) {
-  //          r=google.maps.geometry.spherical.computeDistanceBetween(newLng, newLat);
-    //        return r;
-      //      alert(r);
-        //}
-        
-        //https://stackoverflow.com/questions/14598426/how-to-detect-if-a-point-is-in-a-circle
-});
-    
-   
-    
-    // AND THEY END HERE
-    
-    
-
 	      //autocomplete section on init
         var input_start = document.getElementById('start_address');
 	      var input_end = document.getElementById('end_address');
@@ -391,11 +317,70 @@
 			      }
 			    });
 	      }
+
+	google.maps.event.addListener(map, 'click', async function(event) {
+
+        newLat=event.latLng.lat();
+        newLng=event.latLng.lng();
+        
+        
+        if (click_count == 0) {
+            removeMarkers()
+	    $('#start_address').val("")
+            $('#end_address').val("")
+            placeMarker(event.latLng);
+            var address =  await geocodeLatLng(event.latLng)
+            
+            $('#start_address').val(address)
+            click_count++
+        }
+        else if (click_count == 1) {
+            placeMarker(event.latLng);
+            click_count = 0
+	    var address = await geocodeLatLng(event.latLng)
+            $('#end_address').val(address)
+        }
+        
+	console.log(click_count);
+
+});
+
+function removeMarkers(){
+          for (var i = 0; i < markers.length; i++){
+            markers[i].setMap(null);
+          };
+        };
+
+
 				
 
 	      return;
       };
+            
+    function placeMarker(latlng){
+    var marker1 = new google.maps.Marker({
+        position: latlng, 
+        map: map
+    })
+        markers.push(marker1)
 
+};
+                
+        function geocodeLatLng(latlng) {
+        
+	return new Promise(function(resolve, reject) {
+
+        console.log(latlng)
+        geocoder.geocode({'location': latlng}, function(results, status) {
+            if (status ==='OK') {
+                 console.log(results)
+     var address = (results[0].formatted_address);
+     
+     resolve(address);
+		}
+	})
+    });
+}
       function getDirections() {
 
        return new Promise(function(resolve, reject) {	
@@ -417,13 +402,17 @@
           directionsService.route(request, function(result, status){
             var context = {}
             var step_no = 1
+	    var no_bus = 0
             var walk_time = 0;
+	    table = "<table id = text_directions><tr><th>Step</th><th>Estimate Time</th></tr>"
             if (status == "OK") {
               console.log(result);
               steps = result.routes[0].legs[0].steps
               for (var i = 0; i<steps.length; i++) {
                 if (steps[i].travel_mode == "TRANSIT") {
                   route = []
+		  table+="<tr><td>"+steps[i].transit.line.short_name+" "+steps[i].instructions+" for "+steps[i].transit.num_stops+" stops"+"<td id=step_"+no_bus+"></td></tr>"
+		  no_bus += 1
                   var bus_no = steps[i].transit.line.short_name 
                   var lat1 = steps[i].transit.departure_stop.location.lat()
                   var lat2 = steps[i].transit.arrival_stop.location.lat()
@@ -440,9 +429,11 @@
                   step_no++
                 } else {
                     walk_time += steps[i].duration.value;
+		    table += "<tr><td>"+steps[i].instructions+"</td><td>"+steps[i].duration.text+"</td></tr>"
                 }
               }
-              
+              table+="</table>"
+	      //document.getElementById("results").innerHTML = table
               context["walk_time"] = walk_time
               resolve(context);	
             }
@@ -652,7 +643,7 @@ var pos;
 
                                 markers.push(current_location);
 
-                                var geocoder = new google.maps.Geocoder;
+                                geocoder = new google.maps.Geocoder;
                                 
                                 geocoder.geocode({'location' : pos}, function(result, status) {
 
@@ -685,7 +676,7 @@ var pos;
 		if (cb){
 			geoLocation()
 			removeMarkers()
-
+			directionsDisplay.setMap(null);
 			output = []
           		output.push(pos)          
           		console.log(output)
@@ -761,7 +752,8 @@ var pos;
           event.preventDefault()
           valid = validateForm()
 			    if (valid) {
-			      $('#results > p').text('waiting...');
+			      $('#results').text('waiting...');
+			      $('#price').text("");
 			      getPredictionsAddress();
 		      }
 		    });
@@ -823,7 +815,7 @@ var pos;
             
 
             if ($('#checkbox').is(':checked')){
-              console.log(context)
+              
               var content = "<table> <tr> <th> Route </th> <th style = 'padding : 5px'> ETA(mins) </th> </tr> " 
               if (context[0][0]['rtpi']['results'].length == 0) {
                 content = content + '<tr><td>No RTPI Available</td></tr>';
@@ -852,7 +844,7 @@ var pos;
           var context = await getDirections();
           output = []
           output.push(context)		
-          console.log(output)
+          
           context = JSON.stringify(output)		
           
           date = getInputDate();
@@ -860,12 +852,48 @@ var pos;
           month = date.getMonth() + 1;
           day = date.getDate();
           hour = date.getHours();
-      
+          
           $.get('/predict_address/', {context: context, year: year, month: month, day: day, hour: hour}, function(data) {
+	    var x = [0,1,2,3,4]
+            for (y in x) {
+
+		$("#step_"+x).html("Getting Prediction")
+
+		}
             if (data["error"] == "0") {
+	      console.log(data) 
               popStops(data["stops"])
               drawRoute(data["stops"])
-              $('#results > p').html("Estimated Journey Time:<br>" + data["prediction"]);
+	      $('#results').html(table);
+	      var count = 0
+	      var price = 0
+	      for (i in data["prediction"]) {
+			
+			var step = "step_"+count
+			$("#"+step).html(data["prediction"][i]);
+			count += 1
+	      }
+
+	      for (i in data["price"]) {
+			
+			var price_split = data["price"][i]
+			
+			price_split = price_split.split(".")
+			
+			var euro = Number(price_split[0])*100
+			
+			var cent = Number(price_split[1])
+			total = euro + cent
+			price += total
+			
+			
+
+		}
+
+		price = "€"+price/100
+		leap = getLeap(price)
+		$("#price").html(price + " \\ " + leap)
+              
             } else {
               $('#results > p').html("Oops, something went wrong enter a different route and please try again");
             }
@@ -877,6 +905,7 @@ var pos;
             markers[i].setMap(null);
           };
         };
+
 	});
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADAq7_ArNs1g_fzNE-tLB0scnM5UtXXSM&callback=initMap&libraries=places" type = 'text/javascript'></script>
