--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -1,5 +1,11 @@
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Kirang Haerang', cursive;
+font-family: 'Rubik', sans-serif; */
+
 html body {
     height: 100%;  
+   font-family: 'Rubik', sans-serif;
 }
 
 html {
@@ -13,7 +19,7 @@ background-size: cover;
 
 .navbar {
 
-    height: 40px; /*i assume your navbar size 100px*/
+    height: 60px; /*i assume your navbar size 100px*/
     min-height: 20px;
     margin-bottom: 0;
 }
@@ -26,22 +32,22 @@ background-size: cover;
 
 .active img {
     width: 60px;
-    height: 20px;
+    height: 40px;
     margin-left: 20px;
     margin-right: 20px;
 
 }
 .weather {
-    float: right;
+    float: left;
     position: relative;
 }
 
 .container {
 
-    max-height: 700px;
+    max-height: 500px;
     margin-top: 0px;
     max-width: 2000px;
-    min-width: 2000px;
+ 
 }
 
 
@@ -55,18 +61,60 @@ background-size: cover;
 h1 {
     color: black;
     float: right;
+    font-size: 10px;
+ 
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin-left: 200px;
+    line-height: 12px;
+    margin-top: -50px;
+    font-weight: bold;
+    color: #553D67;
+}
+img {
+    width: 100px;
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 30px;
+    margin-bottom: 0px;
+
+}
+
+
+
+#icon {
+     margin-left: 85px;
+    height: 85px;
+}
+
+ul li {
+    padding: 0;
+    margin-top: 0;
 }
 
 .navbar-header h1 {
-    color: black;
+    color: #B39BC8;
     margin-left: 80px;
     float: right;
+font-family: 'Lato', sans-serif; 
+    font-weight: bold;
+    
  /*   font-family: "Trebuchet MS", Helvetica, sans-serif;*/
 }
 
+
+p {
+    font-family: 'Rubik', sans-serif; 
+    font-size: 5px;
+    
+}
+
 #map {
-  height: 450px;
-min-width: 2000px;
+  height: 500px;
+
 
 }
 
@@ -76,20 +124,20 @@ footer {
 }
 
 .jumbotron  {
-    max-height: 450px;
-    height: 450px; 
+    max-height: 500px;
+    height: 500px; 
 }
 
 col-md-4 {
     
 }
 .jumbotron text-center col-md-4 {
-    height: 450px;
+    height: 300px;
      color: #403F63;  
 }
 
 .jumbotron text-center col-md-8 {
-    height: 450px;
+    height: 500px;
      color: #403F63;  
 }
 
@@ -99,18 +147,17 @@ col-md-4 {
 
 .post-form {
     width: 300px;
-    margin-bottom: 50px;
+    height: 180px;
     margin-left: 10px;
+
 }
 
 
 .panel panel-default{
-    max-height:  500px;  
+
 }
 
-.panel {
-    max-height:  500px;
-}
+
 
 #accordion {
                  position: absolute;
@@ -119,19 +166,20 @@ col-md-4 {
 
 
 select {
-  width: 250px;
+  width: 200px;
 }
 option {
-  width: 250px;
+  width: 200px;
 }
 
 h4 {
     display: inline-block;
-    padding-right: 20px;
+    padding-right: 10px;
+    font-size: 10px;
 }
 
 #inputs {
-    padding-top: 10px;
+padding: 0px;
     margin-left: 90px;
     
 }
@@ -145,18 +193,24 @@ h4 {
 }
 
 
+
 .form-horizontal {
     width: 600px;
+    margin-right: 100px;
 }
 
 #results {
     width: 300px;
     margin-left: 65px;
-    margin-top: -35px;
+
 
 }
-.save btn btn-default {
+
+.geolocation {
     margin-left: 50px;
+}
+.save btn btn-default {
+    margin-left: 100px;
 }
 
 
