--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -34,8 +34,8 @@
     <!-- Static navbar -->
     <nav class="navbar" style=background-color:transparent;  >
      
-        <div class="navbar-header" style="float: right; margin-right: 20px;">
-          <h1>Strategic Bus Solutions Worldwide</h1>
+        <div class="navbar-header" style="float: right; margin-right: 50px;">
+          <h1>SBSW</h1>
         </div>
         
          
@@ -76,8 +76,8 @@
             
               <h4>From</h4>
       
-              <input id="start_address" type="text" name="start_address" style="width: 220px;">
-            <br><input id="geolocation" type="checkbox" style="margin-left: 50px; margin-top: 10px; margin-bottom: 10px;"> Use Current Location 
+              <input id="start_address" type="text" name="start_address" style="margin-left: 0px;width: 220px;">
+            <br><input id="geolocation" type="checkbox" style="margin-left: 50px; margin-top: 10px;"> Use Current Location 
 	  <br>
          <h4> To</h4>
           <input id="end_address" type="text" name="end_address" required style="margin-right: -24px;width: 220px;">
